# shikimori-lang

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  grammar.bnf  run_examples.sh  spec.md  typesystem.md
examples/: all.shiki  arena.shiki  comptime.shiki  ffi.shiki  fibonacci.shiki  hello.shiki  interfaces.shiki  linked_list.shiki  result.shiki  stack.shiki  state_machine.shiki  test_tokenizer.shiki
src/: ast.h  ast_printer.cpp  ast_printer.h  color.hpp  error_reporter.cpp  error_reporter.h  main.cpp  parser.cpp  parser.h  parser_decl.cpp  parser_expr.cpp  parser_stmt.cpp  span.cpp  span.h  tokenizer.cpp  tokenizer.hpp  typechecker.h  typedast.h  types.h  utils.h
src/ast/: ast.h  ast_decl.hpp  ast_expr.hpp  ast_fwd.hpp  ast_printer.cpp  ast_printer.h  ast_stmt.hpp  ast_types.hpp  typed_ast_printer.cpp  typed_ast_printer.h  typedast.h
src/parser/: parser.cpp  parser.h  parser_decl.cpp  parser_expr.cpp  parser_stmt.cpp  tokenizer.cpp  tokenizer.hpp
src/typechecker/: import_resolver.cpp  import_resolver.h  typechecker.cpp  typechecker.h
tests/: tokenizer_test.cpp  typechecker_test.cpp
